tests/fixtures/invalid/set_in_bool.py
# Cannot use 'in' with Set[int] and Bool
x: bool = {1, 2, 3} in True
